[package]
name = "binance_300_bucks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
tokio = { version = "1.22.0", features = ["full"] }
